# sdpcodec-open

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements-vqw2v.txt  requirements.txt
common/: validation_metric_loading.py
configs/: sdpcodec_vqw2v_rvq300.yaml
criterions/: gan_loss.py  mel_loss.py
docs/: pretrained_assets.md
metrics/: metrics.py
module/: __init__.py  mpd.py  mstft.py
pretrained_models/pitch_estimator/: fcpe_wrapper.py
ptl/: __init__.py  sampler.py
ptl/bicodec/: __init__.py  data_module.py
ptl/sdpcodec/: __init__.py  lightning_module.py
scripts/: train_default.sh  train_docker.sh
sdpcodec/: __init__.py  data.py  infer.py  system.py  test.py  train.py
vq/: __init__.py  activations.py  codec_decoder.py  codec_encoder.py  module.py  ssl_codec_wrappers.py  temporal_config.py
vq/alias_free_torch/: act.py
vq/f0/: codec_structure.py
vq/speaker/: perceiver_encoder.py  speaker_encoder.py
vq/speaker/wavlm/: WavLM.py
vq/vq/: factorized_vector_quantize.py  residual_vq.py
